# ParallelNonLinearFEM

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: ElementLib.h  InputOuput.h  MaterialLib.h  NodeSet.h
include/elements/: Element.h  ElementShapeFunctions.h  FiniteStrainContinuum.h  FiniteStrainContinuumUL.h  Hexa8ShapeFunctions.h  Interface.h  KirchhoffBeam.h  Quad8ShapeFunctions.h  SmallStrainContinuum.h  Spring.h  TimoshenkoBeam.h  Truss.h
include/elements/shapefunctions/: ElementShapeFunctions.h  Hexa8ShapeFunctions.h  Line2ShapeFunctions.h  Line3ShapeFunctions.h  Quad4ShapeFunctions.h  Quad8ShapeFunctions.h  Tetra4ShapeFunctions.h  Tria3ShapeFunctions.h  Tria6ShapeFunctions.h
include/fem/: DofSpace.h  ElementSet.h  NodeSet.h
include/io/: GraphWriter.h  InputReader.h  MeshWriter.h  OutputManager.h  OutputWriter.h
include/materials/: BaseMaterial.h  LinearElasticity.h  MaterialManager.h  PlaneStrain.h  PlaneStress.h
include/materials/ElasticityPlasticity/: ElasticityPlasticity.h  VonMises.h
include/materials/LinearElasticity/: LinearElasticity.h
include/solvers/: ExplicitSolver.h  LinearSolver.h  NonlinearSolver.h  RiksSolver.h  Solver.h  Solvers.h
include/util/: BaseModule.h  DataStructure.h  FileParse.h  Kinematics.h  Math.h  ObjectFactory.h  ShapeFunctions.h  Tools.h  Transformations.h
input/: ParallelFEM.in  PatchTest3.pro  cantilever8-0.vtu  cantilever8-1.vtu  cantilever8-10.vtu  cantilever8-11.vtu  cantilever8-12.vtu  cantilever8-13.vtu  cantilever8-14.vtu  cantilever8-15.vtu  cantilever8-16.vtu  cantilever8-17.vtu  cantilever8-18.vtu  cantilever8-19.vtu  cantilever8-2.vtu  cantilever8-3.vtu  cantilever8-4.vtu  cantilever8-5.vtu  cantilever8-6.vtu  cantilever8-7.vtu  cantilever8-8.vtu  cantilever8-9.vtu  cantilever8.pro  cantilever8.pvd
software/elements/: CMakeLists.txt
software/elements/include/: Element.h  FiniteStrainContinuum.h  FiniteStrainContinuumUL.h  Interface.h  KirchhoffBeam.h  SmallStrainContinuum.h  Spring.h  TimoshenkoBeam.h  Truss.h
software/elements/shapefunctions/: CMakeLists.txt
software/elements/shapefunctions/include/: ElementShapeFunctions.h  Hexa8ShapeFunctions.h  Line2ShapeFunctions.h  Line3ShapeFunctions.h  Quad4ShapeFunctions.h  Quad8ShapeFunctions.h  Tetra4ShapeFunctions.h  Tria3ShapeFunctions.h  Tria6ShapeFunctions.h
software/elements/shapefunctions/source/: Hexa8ShapeFunctions.cpp  Line2ShapeFunctions.cpp  Line3ShapeFunctions.cpp  Quad4ShapeFuntions.cpp  Quad8ShapeFunctions.cpp  Tetra4ShapeFunctions.cpp  Tria3ShapeFuntions.cpp  Tria6ShapeFunctions.cpp
software/elements/source/: Element.cpp  FiniteStrainContinuum.cpp  FiniteStrainContinuumUL.cpp  Interface.cpp  KirchhoffBeam.cpp  SmallStrainContinuum.cpp  Spring.cpp  TimoshenkoBeam.cpp  Truss.cpp
software/fem/: CMakeLists.txt
software/fem/include/: DofSpace.h  ElementSet.h  NodeSet.h
software/fem/source/: DofSpace.cpp  ElementSet.cpp  NodeSet.cpp
software/io/: CMakeLists.txt
software/io/include/: GraphWriter.h  InputReader.h  MeshWriter.h  OutputManager.h  OutputWriter.h
software/io/source/: GraphWriter.cpp  InputReader.cpp  MeshWriter.cpp  OutputManage.cpp  OutputWriter.cpp
software/materials/: CMakeLists.txt
software/materials/damage/: CMakeLists.txt
software/materials/elasticityplasticity/: CMakeLists.txt
software/materials/include/: BaseMaterial.h  MaterialManager.h
software/materials/linearelasticity/: CMakeLists.txt
software/materials/linearelasticity/include/: LinearElasticity.h
software/materials/linearelasticity/source/: LinearElasticity.cpp
software/materials/source/: BaseMaterial.cpp  MaterialManager.cpp  PlaneStress.cpph
software/solvers/: CMakeLists.txt
software/solvers/include/: ExplicitSolver.h  LinearSolver.h  Solver.h  (+2 more)
software/util/: CMakeLists.txt
source/: InputOuput.cpp
source/elements/: Element.cpp  FiniteStrainContinuum.cpp  FiniteStrainContinuumUL.cpp  Hexa8ShapeFunctions.cpp  Interface.cpp  KirchhoffBeam.cpp  Quad8ShapeFunctions.cpp  SmallStrainContinuum.cpp  Spring.cpp  TimoshenkoBeam.cpp  Truss.cpp
source/fem/: DofSpace.cpp  ElementSet.cpp  NodeSet.cpp
source/io/: GraphWriter.cpp  InputReader.cpp  MeshWriter.cpp  OutputManage.cpp  OutputWriter.cpp
source/materials/: BaseMaterial.cpp  LinearElasticity.cpp  MaterialManager.cpp  PlaneStrain.cpp  PlaneStrain.cpph  PlaneStress.cpp
source/solvers/: ExplicitSolver.cpp  LinearSolver.cpp  NonlinearSolver.cpp  RiksSolver.cpp  Solver.cpp
source/util/: DataStructure.cpp  FileParse.cpp  Math.cpp  ShapeFunction.cpp  Tools.cpp  Transformations.cpp
(+46 files in other folders)
